# ostest_integration_test

./: .gitignore  LICENSE  OAT.xml  README.en.md  README.md  openharmony_news.db  scenario - 快捷方式.lnk
OHBM/: build-profile.json5  code-linter.json5  oh-package-lock.json5  oh-package.json5
OHBM/AppScope/: app.json5
OHBM/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
OHBM/hvigor/: hvigor-config.json5
coverage_csv/: cailueyan_4_coverage.csv
docs/: CaseRule.md  FeatureMapRule.md
function/ability_runtime/: BUILD.gn  README_zh.md
function/ability_runtime/actsmultiuserconfigurationtest/: BUILD.gn  Test.json  build-profile.json5
function/ability_runtime/actsqueryatomicservicetest/: BUILD.gn  Test.json  build-profile.json5
function/ability_runtime/actsqueryatomicservicetest2/: BUILD.gn  Test.json  build-profile.json5
function/ability_runtime/actsqueryatomicservicetest3/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
function/ability_runtime/hitsamstest/: BUILD.gn
function/ability_runtime/stateinfo/: BUILD.gn
function/ability_runtime/uri_AuthorizationAndRevocation/: BUILD.gn
function/arkui/inspector_test/: build-profile.json5  code-linter.json5  oh-package-lock.json5
function/bms/bundlemanager/: BUILD.gn  README_zh.md
function/bms/bundlemanager/hitsbmenterprisemdmtest/: BUILD.gn
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbminstallbundle/entry/src/ohosTest/ets/test/: MdmInstallBundle.test.ets
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbminstallenterprisebundle/entry/src/ohosTest/ets/test/: MdmInstallEnterPriseBundle.test.ets
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbminstallenterprisemdmbundle/: BUILD.gn  Test.json
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbminstallenterprisemdmbundle/entry/src/ohosTest/ets/test/: InstallEnterPriseMdmBundle.test.ets
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbminstallenterprisenormalbundle/entry/src/ohosTest/ets/test/: InstallEnterPriseNormalBundle.test.ets
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbmuninstallbundle/entry/src/ohosTest/ets/test/: MdmUnInstallBundle.test.ets
function/bms/bundlemanager/hitsbmenterprisemdmtest/hitsbmuseuninstallbundlepermissiontouninstall/entry/src/ohosTest/ets/test/: MdmInstallBundleToUnInstall.test.ets
function/bms/bundlemanager/hitsinstallcrowdtest/entry/src/ohosTest/ets/test/: CrowdInstall.test.ets
function/bms/bundlemanager/hitsinstalloruninstallnormalhap/: BUILD.gn
function/bms/bundlemanager/hitsqueryinhouse/hitsgetdeveloperids/entry/src/ohosTest/ets/test/: Getdeveloper.test.ets
function/bms/bundlemanager/sceneProject/bmsqueryresourceinfo062/entry/src/main/ets/accessibilityextability/: AccessibilityExtAbility.ets
function/communication/connectivity/: oh-package.json5
function/communication/wifi/: README_CN.md  oh-package.json5
function/device_manager/device_manager/: oh-package.json5
function/file_manager/file_io/: oh-package.json5
function/multimedia/audio/: README_CN.md  oh-package.json5
function/multimedia/camera/: README_CN.md  oh-package.json5
function/multimedia/image/: oh-package.json5
function/multimedia/video/: oh-package.json5
function/notification/: build-profile.json5  oh-package.json5
function/notification/AppScope/: app.json5
function/notification/entry/: build-profile.json5  oh-package.json5
function/notification/hvigor/: hvigor-config.json5
function/ui_compare/: README.md
function/ui_compare/uiCompareTest_03/: build-profile.json5  oh-package-lock.json5  oh-package.json5
function/ui_compare/uiCompareTest_04/: build-profile.json5  oh-package.json5
function/ui_compare/uicompare/: build-profile.json5  oh-package.json5
function/ui_compare/uicompare_tools/: UiCompareTools_progress.py  run.bat
function/ui_compare_rh/uicompare/: oh-package.json5
function/ui_compare_rh/uicompare_tools/: UiCompareTools_progress.py  mode.html  run.bat
performance/arkts/benchmark_arkts_compiler/: README_CN.md  oh-package.json5
performance/arkui/benchMark_Component/: README.md  hvigorw
performance/arkui/benchmark_component/: .gitignore  build-profile.json5  oh-package.json5
performance/arkui/benchmark_pipeline/: README.md  benchmark.bat  benchmark_pipeline_report.html  bytrace.bat  (+4 more)
scenario/MusicPlayerOnline/: README_zh.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  ohosTest.md
scenario/MusicPlayerOnlineServer/: address.txt
scenario/MyApplication/: build-profile.json5
scenario/MyDoc/: README_zh.md  build-profile.json5  oh-package.json5
scenario/MyGame_2d/: README.md
scenario/MyMap/: README_zh.md  build-profile.json5  oh-package.json5
scenario/MyMusic/: .gitignore  README_zh.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
scenario/MyNews/: oh-package.json5
scenario/MyShopping/: README.md  build-profile.json5
scenario/TodayOpenHarmony/: code-linter.json5  oh-package-lock.json5  oh-package.json5
scenario/UnityGame/: README.md
scenario/arkuiTest/: ostest.py
(+6008 files in other folders)
