# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("bundlemanager") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "hitsbmenterprisemdmtest:hitsbmenterprisemdmtest",
      "hitsbmsdefaultapptest:hits_bms_defaultapp_test",
      "hitsinstallcrowdtest:HitsInstallCrowdTest",
      "hitsinstalloruninstallnormalhap:hitsinstalloruninstallnormalhap",
      "hitsqueryinhouse:hitsqueryinhouse",
      "sceneProject/bmcrowdtesting:Hits_CrowdTesting",
      "sceneProject/bmenterprise:Hits_bm_enterprise",
      "sceneProject/bmenterprisembm:Hits_bm_mdm",
      "sceneProject/bmenterprisembmnormal:Hits_bm_mdm_normal",
      "sceneProject/bmenterprisembmnormalenterprise:Hits_bm_mdm_normal_enterprise",
      "sceneProject/bmgallery:HitsGalleryTest",
      "sceneProject/bmmdmnormalhap:Hits_bm_normal_mdm_hap",
      "sceneProject/bmnone:Hits_bm_none",
      "sceneProject/bmosintegrationone:Hits_OsIntegration_One",
      "sceneProject/bmosintegrationtwo:Hits_OsIntegration_Two",
      "sceneProject/bmsdefaultapp:hits_bms_default_app",
      "sceneProject/bmsinstallcrowd0200:bmsInstallCrowd0200",
      "sceneProject/bmsinstallcrowd02001:bmsInstallCrowd02001",
    ]
  }
}
