# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("bundlemanager") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "hitsbmenterprisemdmtest:hitsbmenterprisemdmtest",
      "hitsbmscorenopermission:HitsBmsCoreNoPermissionTest",
      "hitsbmsdefaultapptest:hits_bms_defaultapp_test",
      "hitsbmsnopermission:HitsBmsNoPermissionTest",
      "hitsinstallcrowdtest:HitsInstallCrowdTest",
      "hitsinstalloruninstallnormalhap:hitsinstalloruninstallnormalhap",
      "hitspresetuninstallupdates:HitsPresetUninstallupdatesTest",
      "hitsqueryinfo:HitsBmsQueryInfo",
      "hitsqueryinhouse:hitsqueryinhouse",
      "sceneProject/bmcrowdtesting:Hits_CrowdTesting",
      "sceneProject/bmenterprise:Hits_bm_enterprise",
      "sceneProject/bmenterprisembm:Hits_bm_mdm",
      "sceneProject/bmenterprisembmnormal:Hits_bm_mdm_normal",
      "sceneProject/bmenterprisembmnormalenterprise:Hits_bm_mdm_normal_enterprise",
      "sceneProject/bmgallery:HitsGalleryTest",
      "sceneProject/bmmdmnormalhap:Hits_bm_normal_mdm_hap",
      "sceneProject/bmnone:Hits_bm_none",
      "sceneProject/bmosintegrationone:Hits_OsIntegration_One",
      "sceneProject/bmosintegrationtwo:Hits_OsIntegration_Two",
      "sceneProject/bmsdefaultapp:hits_bms_default_app",
      "sceneProject/bmsinstallcrowd0200:bmsInstallCrowd0200",
      "sceneProject/bmsinstallcrowd02001:bmsInstallCrowd02001",
      "sceneProject/bmsqueryinfo001:bmsQueryInfo001",
      "sceneProject/bmsqueryinfo002:bmsQueryInfo002",
      "sceneProject/bmsqueryinfo003:bmsQueryInfo003",
      "sceneProject/bmsqueryinfo004:bmsQueryInfo004",
      "sceneProject/bmsqueryinfo005:bmsQueryInfo005",
      "sceneProject/bmsqueryinfo007:bmsQueryInfo007",
      "sceneProject/bmsqueryinfo008:bmsQueryInfo008",
      "sceneProject/bmsqueryinfo009:bmsQueryInfo009",
      "sceneProject/bmsqueryinfo0072:bmsQueryInfo0072",
      "sceneProject/bmsqueryinfo0082:bmsQueryInfo0082",
      "sceneProject/bmsqueryinfo0083:bmsQueryInfo0083",
      "sceneProject/bmsqueryresourceinfo008:bmsQueryResourceInfo008",
      "sceneProject/bmsqueryresourceinfo024:bmsQueryResourceInfo024",
      "sceneProject/bmsqueryresourceinfo059:bmsQueryResourceInfo059",
      "sceneProject/bmsqueryresourceinfo060:bmsQueryResourceInfo060",
      "sceneProject/bmsqueryresourceinfo062:bmsQueryResourceInfo062",
      "sceneProject/bmsqueryresourceinfo0082:bmsQueryResourceInfo0082",
      "sceneProject/bmsqueryresourceinfo0242:bmsQueryResourceInfo0242",
    ]
  }
}
